infra/cluster/tot_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tot
  labels:
    app: tot
spec:
  replicas: 1  # one canonical source of build numbers
  template:
    metadata:
      labels:
        app: tot
    spec:
      nodeSelector:
        role: prow
      terminationGracePeriodSeconds: 30
      containers:
      - name: tot
        image: gcr.io/isito-prow/tot:0.0
        imagePullPolicy: Always
        args:
        - -log-json
        - -storage=/store/tot.json
        ports:
          - name: http
            containerPort: 8888
        volumeMounts:
        - mountPath: /store
          name: tot-volume
      volumes:
        - name: tot-volume
          persistentVolumeClaim:
            claimName: tot-storage
